--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,6 @@ jobs:
   run-test:
     runs-on: ubuntu-latest
     steps:
-      - name: List files in the repository
+      - run: echo "List files in the repository"
       - run: ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
